Cambie el nombre de la pagina de password

--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -7,7 +7,7 @@
       <div class="col-sm">
       </div>
       <div class="col-sm">
-        <h1>Your password is:</h1>
+        <h1>Tu contraseña es:</h1>
       </div>
       <div class="col-sm">
       </div>
